# ai-decision-council

./: .coverage  .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  k8s-deployment.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  architecture.md  cli-usage.md  configuration.md  deployment.md  framework-snippets.md  migration.md  openapi.json  performance-benchmarks.md  python-integration.md  quickstart.md  troubleshooting.md  use-cases.md  walkthrough.md
docs/sdk/: __init__.py  councilApiClient.ts  councilApiTypes.ts  council_api_client.py  council_api_types.py  index.ts
src/ai_decision_council/: __init__.py  __main__.py  _cli_commands.py  _cli_sdk.py  _cli_templates.py  _cli_utils.py  bridge.py  cache.py  circuit_breaker.py  cli.py  client.py  config.py  config_loader.py  council.py  metrics.py  models.py  observability.py  openrouter.py  schemas.py
src/ai_decision_council/api/: __init__.py
src/ai_decision_council/api/fastapi/: __init__.py  app.py  backends.py  helpers.py  rate_limiter.py  request_models.py  router.py  settings.py
src/ai_decision_council/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py
tests/: test_audit_fixes.py  test_backends.py  test_bridge.py  test_cache.py  test_circuit_breaker.py  test_client.py  test_config.py  test_config_file.py  test_council_utils.py  test_fastapi_api.py  test_metrics.py  test_models.py  test_observability.py  test_pipeline.py  test_pipeline_production.py  test_providers.py  test_providers_new.py  test_rate_limiter.py  test_schemas.py
